@@ -8,7 +8,9 @@ Change log
 ----------
 
 0.10u:
-
+    - Added support for legato where a controller value is set instead of sending the NOTE_OFF of the current note after the NOTE_ON for the next node.
+      This is needed for certain MIDI devices (e.g. from Roland) to enable usage of note slides. This feature can be enabled by setting the attributes
+      "legatoController", "legatoControllerValueOn" and "legatoControllerValueOff" in the MidiPlayer's "map" tag.
 
 
 0.9: 2016-12-29
